fixed errors in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>This Is a Heading</h1>
     <img src="./images/Apple-Varieties.jpg" alt="pictures of apples" class="apple">
     <img src="./images/threebudgies.jpg" alt="Three Budgies on a perch" class="budgie">
-    <img src="./images/flowers.jpg" alt="Flowers" class="flower"
+    <img src="./images/flowers.jpg" alt="Flowers" class="flower">
     <script src="script.js"></script>
   </body>
 </html>
